Enable refresh tokens when creating native applications